# caiasoft-sdk-python

./: .gitignore  .linelint.yml  .pylintrc  CHANGES.txt  LICENSE.txt  README.md  pyproject.toml  requirements.txt  setup.py
.github/: dependabot.yml
.github/workflows/: cflr-check.yml  crlf-check.yml  linelint.yml
caiasoft/: __init__.py  base.py
