[tool.poetry]
name = "caiasoft-sdk-python"
version = "1.1.2"
description = "SDK for Caiasoft API"
authors = ["Thomas Misilo <tmisilo@ksu.edu>"]
license = "MIT"
readme = "README.md"
packages = [{include = "caiasoft"}]

[tool.poetry.dependencies]
python = ">=3.7.2,<4.0"
requests = "^2.28"
pydantic = "^1.10"

[tool.poetry.group.dev.dependencies]
pylint = "^2.15.7"

[tool.poetry_bumpversion.file."caiasoft/__init__.py"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
