[tool.poetry]
name = "caiasoft-sdk-python"
version = "2.4.0"
description = "SDK for Caiasoft API"
authors = ["Thomas Misilo <tmisilo@ksu.edu>"]
license = "MIT"
readme = "README.md"
packages = [{include = "caiasoft"}]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
requests = "^2.32.4"
pydantic = "^2.9.2"

[tool.poetry.group.dev.dependencies]
pylint = "^2.15.7"

[tool.poetry_bumpversion.file."caiasoft/__init__.py"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
