[tool.poetry]
name = "caiasoft-sdk-python"
version = "2.4.0"
description = "SDK for Caiasoft API"
authors = ["Thomas Misilo <tmisilo@ksu.edu>"]
license = "MIT"
readme = "README.md"
packages = [{include = "caiasoft"}]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
requests = "^2.32.4"
pydantic = "^2.9.2"

[tool.poetry.group.dev.dependencies]
pylint = "^3.2.7"
ksul-cz = "^0.4.0"

[tool.poetry_bumpversion.file."caiasoft/__init__.py"]


[tool.commitizen]
name = "ksul_cz"
tag_format = "v$version"
version_scheme = "semver"
version_provider = "poetry"
update_changelog_on_bump = true
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
